completing the tasks

--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,7 @@
     <div class="gallery">
       <!-- Картки зображень -->
     </div>
-    <div class="container"></div>
-    <!-- <button type="button" class="load-more">Load more</button> -->
+    <button type="button" class="load-more">Load more</button>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
