--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,12 @@
         autocomplete="off"
         placeholder="Search images..."
       />
-      <button type="submit">Search</button>
+      <button class="search-btn" type="submit">Search</button>
     </form>
     <div class="gallery">
       <!-- Картки зображень -->
     </div>
-    <button type="button" class="load-more">Load more</button>
+    <button type="button" class="load-more is-hidden">Load more</button>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
