--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,14 @@
         name="searchQuery"
         autocomplete="off"
         placeholder="Search images..."
+        class="form-input"
       />
-      <button class="search-btn" type="submit">Search</button>
+      <button class="search-btn" type="submit">
+        Search
+        <span
+          ><img src="./images/search.png" width="16" height="16" alt=""
+        /></span>
+      </button>
     </form>
     <div class="gallery">
       <!-- Картки зображень -->
